--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,5 @@
 {
-    "name": "Python Dev Container",
-    "dockerFile": "Dockerfile",
-    "extensions": ["ms-python.vscode-pylance"],
-    "settings": {
-      "python.pythonPath": "/usr/local/bin/python"
-    }
+  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "features": {
   }
-  
+}
